--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,26 @@
 </head>
 <body>
 
-<h1> YO </h1>
+<h1> Hello World </h1>
+
+<h3 id="status"></h3>
+
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
 <script type="text/javascript" charset="utf-8">
     var socket = io.connect('http://' + document.domain + ':' + location.port);
+    
     socket.on('connect', function() {
         socket.emit('first connect', {data: 'I\'m connected!'});
     });
+
+    socket.on('pong', function(response) {
+    	console.log(response);
+    	r = JSON.parse(response);
+    	var user_feedback_message = document.getElementById('status');
+    	user_feedback_message.innerHTML = r.body;
+    });
+
 </script>
 
 </body>
