--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,13 @@
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
 <script type="text/javascript" charset="utf-8">
-    var socket = io.connect('http://' + document.domain + ':' + location.port);
+	if(document.domain === 'localhost') {
+		var socket = io.connect('http://' + document.domain + ':' + location.port);	
+	}
+	else {
+		var socket = io.connect('https://' + document.domain + ':' + location.port);	
+	}
+    
     
     socket.on('connect', function() {
         socket.emit('first connect', {data: 'I\'m connected!'});
